--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <title>HWTest</title>
     <link rel="stylesheet" href="./index.css">
   </head>
   <body>
    <h1>Homework Examples</h1>
+   <h2>Recent</h2>
+   <table>
+    <thead></thead>
+    <tbody></tbody>
+   </table>
+   <script src="./main.js"></script>
   </body>
+
 </html>
